--- a/Quantumult配置/quantumult自用配置文件.conf
+++ b/Quantumult配置/quantumult自用配置文件.conf
@@ -1,7 +1,9 @@
+#翼二一自用完善的Quantumult配置规则
+#结合了很多很多地方，根据自己的使用持续更新。
 
 [general]
 
-#解析器作者 
+#解析器
 resource_parser_url=https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/resource-parser.js
 
 #IP_API 
@@ -17,21 +19,31 @@ address=/raw.githubusercontent.com/185.199.110.133
 
 [policy]
 #策略组
+#图标来自https://github.com/Koolson/Qure
 
-static=国外社交, 国外媒体,   PROXY, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Telegram.png
-static=Apple服务, DIRECT, 国外媒体,  PROXY, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Apple.png
-static=Ai 平台, 国外媒体, PROXY, DIRECT, img-url=https://raw.githubusercontent.com/limbopro/Zure/master/AI%20Platforms.png
-static=Netflix, 国外媒体, PROXY, img-url=https://raw.githubusercontent.com/limbopro/Zure/master/IconSet/Netflix_Letter.png
-static=迪士尼+, 国外媒体, PROXY, img-url=https://raw.githubusercontent.com/limbopro/Zure/master/IconSet/Disney+.png
-static=Tiktok, 国外媒体, PROXY, img-url=https://raw.githubusercontent.com/limbopro/Zure/master/IconSet/TikTok.png
-static=国外媒体, ,PROXY, img-url=https://raw.githubusercontent.com/limbopro/Qure/master/IconSet/GlobalMedia.png
-static=广告拦截, REJECT, PROXY, DIRECT, img-url=https://raw.githubusercontent.com/limbopro/Qure/master/IconSet/Advertising.png
-static=其他, 国外媒体, PROXY, DIRECT, 广告拦截, img-url=https://raw.githubusercontent.com/limbopro/Zure/master/IconSet/其他.png
+static=国外社交, 国外媒体, 美国节点,台湾节点,香港节点,日本节点,新加坡节点,  PROXY, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Telegram.png
+static=Apple服务, DIRECT, 美国节点,台湾节点,香港节点,日本节点,新加坡节点,   PROXY, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Apple.png
+static=Ai 平台, 美国节点,台湾节点,香港节点,日本节点,新加坡节点, PROXY, DIRECT, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Siri.png
+static=Netflix, 美国节点,台湾节点,香港节点,日本节点,新加坡节点,  PROXY, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Netflix.png
+static=迪士尼+, 美国节点,台湾节点,香港节点,日本节点,新加坡节点,  PROXY, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Disney+.png
+static=Tiktok, 美国节点,台湾节点,香港节点,日本节点,新加坡节点, DIRECT,PROXY, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/TikTok.png
+static=国外媒体, 美国节点,台湾节点,香港节点,日本节点,新加坡节点,DIRECT ,PROXY, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Streaming.png
+static=广告拦截, REJECT, PROXY, DIRECT, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/AdBlack.png
+static=其他未知, DIRECT, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Final.png
+
+
+#节点地方选择策略组
+Available= 美国节点, server-tag-regex= 🇺🇸|美|States|US, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/US.png
+Available= 台湾节点, server-tag-regex= 🇨🇳|台|Tai|TW, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/China.png
+Available= 香港节点, server-tag-regex= 🇭🇰|港|Hong|HK, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Hong_Kong.png
+Available= 日本节点, server-tag-regex= 🇯🇵|日|Japan|JP, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Japan.png
+Available= 新加坡节点, server-tag-regex= 🇸🇬|新|Singapore|SG, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Singapore.png
+
 
 
 [server_remote]
-#订阅地址
-https://808.msclm.net/api/v1/client/subscribe?token=cf444642e8d6adfe3a42e44c3cc67aaa,tag=转发服务器
+#订阅地址，可以多个
+,tag=转发服务器
 
 
 [filter_remote]
@@ -71,7 +83,7 @@ ip-cidr, 172.16.0.0/12, direct
 ip-cidr, 192.168.0.0/16, direct
 ip-cidr, 224.0.0.0/24, direct
 #最终
-final, 其他
+final, 其他未知
 
 [rewrite_local]
 
