--- a/surge配置/surge自用配置.conf
+++ b/surge配置/surge自用配置.conf
@@ -61,12 +61,12 @@ Google = select, 直连, 通用代理, 🇭🇰 香港节点, 🇺🇲 美国节
 游戏 = select, 直连, 通用代理, 🇭🇰 香港节点, 🇺🇲 美国节点, 🇸🇬 新加坡节点, 🇯🇵 日本节点, 🇨🇳 台湾节点
 网易云 = select, 🇺🇲 美国节点, no-alert=0, hidden=0, include-all-proxies=0
 # > 外部节点
-🇭🇰 香港节点 = fallback, policy-path=https://dc.msclm.net/api/v1/client/subscribe?token=cf444642e8d6adfe3a42e44c3cc67aaa, update-interval=0, policy-regex-filter=(🇭🇰)|(港)|(Hong)|(HK), no-alert=0, hidden=0, include-all-proxies=0
-🇨🇳 台湾节点 = fallback, policy-path=https://dc.msclm.net/api/v1/client/subscribe?token=cf444642e8d6adfe3a42e44c3cc67aaa, update-interval=0, policy-regex-filter=(🇨🇳)|(台)|(Tai)|(TW)
-🇺🇲 美国节点 = fallback, policy-path=https://dc.msclm.net/api/v1/client/subscribe?token=cf444642e8d6adfe3a42e44c3cc67aaa, update-interval=0, policy-regex-filter=(🇺🇸)|(美)|(States)|(US)
-🇯🇵 日本节点 = fallback, policy-path=https://dc.msclm.net/api/v1/client/subscribe?token=cf444642e8d6adfe3a42e44c3cc67aaa, update-interval=0, policy-regex-filter=(🇯🇵)|(日)|(Japan)|(JP)
-🇸🇬 新加坡节点 = fallback, policy-path=https://dc.msclm.net/api/v1/client/subscribe?token=cf444642e8d6adfe3a42e44c3cc67aaa, update-interval=0, policy-regex-filter=(🇸🇬)|(新)|(Singapore)|(SG)
-手动选择 = select, policy-path=https://dc.msclm.net/api/v1/client/subscribe?token=cf444642e8d6adfe3a42e44c3cc67aaa, update-interval=0, no-alert=0, hidden=0, include-all-proxies=0
+🇭🇰 香港节点 = fallback, policy-path=填写你的订阅地址, update-interval=0, policy-regex-filter=(🇭🇰)|(港)|(Hong)|(HK), no-alert=0, hidden=0, include-all-proxies=0
+🇨🇳 台湾节点 = fallback, policy-path=填写你的订阅地址, update-interval=0, policy-regex-filter=(🇨🇳)|(台)|(Tai)|(TW)
+🇺🇲 美国节点 = fallback, policy-path=填写你的订阅地址, update-interval=0, policy-regex-filter=(🇺🇸)|(美)|(States)|(US)
+🇯🇵 日本节点 = fallback, policy-path=填写你的订阅地址, update-interval=0, policy-regex-filter=(🇯🇵)|(日)|(Japan)|(JP)
+🇸🇬 新加坡节点 = fallback, policy-path=填写你的订阅地址, update-interval=0, policy-regex-filter=(🇸🇬)|(新)|(Singapore)|(SG)
+手动选择 = select, policy-path=填写你的订阅地址, update-interval=0, no-alert=0, hidden=0, include-all-proxies=0
 
 [Rule]
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/NetEaseMusic/NetEaseMusic.list,网易云
